--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -30,7 +30,8 @@ serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.145"
 # Database
 mongodb = "3.3.0"
-bson = { version = "3.0.0", features = ["chrono-0_4"] }
+# we use star here because mongodb dep will set the version, this declaration is used for the feature flag
+bson = { version = "*", features = ["chrono-0_4"] }
 # Utils
 base64ct = "1.8.0"
 bcrypt = "0.17.1"
