--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -5,3 +5,7 @@ edition.workspace = true
 authors.workspace = true
 
 [dependencies]
+yew = { version = "0.21", features = ["csr"] }
+gloo-net = "0.2"
+serde = { version = "1.0", features = ["derive"] }
+wasm-bindgen-futures = "0.4"
