--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -6,6 +6,7 @@ authors.workspace = true
 
 [dependencies]
 yew = { version = "0.21", features = ["csr"] }
+yew-router = "0.18.0"
 gloo-net = "0.2"
 serde = { version = "1.0", features = ["derive"] }
 wasm-bindgen-futures = "0.4"
