--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -7,6 +7,10 @@ authors.workspace = true
 [dependencies]
 yew = { version = "0.21", features = ["csr"] }
 yew-router = "0.18.0"
+yew-hooks = "0.3.4"
 gloo-net = "0.2"
 serde = { version = "1.0", features = ["derive"] }
+web-sys = "0.3.82"
 wasm-bindgen-futures = "0.4"
+wasm-logger = "0.2.0"
+log = "0.4.28"
