--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -16,3 +16,5 @@ wasm-bindgen-futures = "0.4"
 wasm-logger = "0.2.0"
 log = "0.4.28"
 thiserror = "2.0.17"
+jsonwebtoken = { version = "10.1.0", features = ["rust_crypto"] }
+chrono = { version = "0.4.42", features = ["serde"] }
