--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["backend", "frontend"]
+members = ["backend", "frontend", "frontend-server"]
 resolver = "3"
 
 [workspace.package]
