--- a/infra/docker-compose-integrated.yml
+++ b/infra/docker-compose-integrated.yml
@@ -18,6 +18,14 @@ services:
     volumes:
       - hb_database_data:/data/db
       - hb_database_logs:/data/logs
+  mongosetup:
+    image: mongo:7.0.14
+    depends_on:
+      - mongodb
+    restart: "no"
+    networks:
+      - hb-network
+    entrypoint: [ "bash", "-c", "sleep 10 && mongosh --host mongodb:27017 --eval 'rs.initiate()'" ]
 
   backend:
     image: hello-blog-integrated
