--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -14,6 +14,7 @@ tokio = "1.48.0"
 # Logging dependencies
 tracing = "0.1.41"
 tracing-appender = "0.2.3"
+tracing-futures = "0.2.5"
 tracing-subscriber = { version = "0.3.20", features = ["std", "env-filter"] }
 # Web application framework
 axum = { version = "0.8.6", features = ["macros"] }
