using dotenv_codegen to load variables at compile time for frontend

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,6 @@ MONGODB_DB_NAME=hello-blog-database
 OBJECT_STORAGE_BACKEND=LocalFileSystem
 OBJECT_STORAGE_PREFIX_PATH=./data
 FRONTEND_MODE=external
+FE_API_URL=http://localhost:3000/api
+FE_MOCK=false
+FE_TOKEN_STORAGE_LOCATION_NAME=hello_blog_token
