working docker compose external

--- a/infra/Dockerfile-frontend
+++ b/infra/Dockerfile-frontend
@@ -9,10 +9,16 @@ RUN rustup target add wasm32-unknown-unknown
 RUN cargo install --locked trunk
 
 # Copy files and install rust components
-COPY ./frontend .
-RUN cargo build
+COPY backend /app/backend
+COPY frontend /app/frontend
+COPY frontend-server /app/frontend-server
+COPY Cargo.toml /app/Cargo.toml
+COPY Cargo.lock /app/Cargo.lock
+# change this .env file to change the frontend configuration
+COPY .env /app/.env
 
 # Build the application
+WORKDIR /app/frontend
 RUN trunk build --release
 
 # --- SERVING IMAGE --- #
@@ -21,7 +27,7 @@ FROM nginx:alpine
 
 # copy the nginx configuration and the dist folder
 COPY infra/nginx.conf /etc/nginx/conf.d/default.conf
-COPY --from=builder /app/dist /usr/share/nginx/html
+COPY --from=builder /app/frontend/dist /usr/share/nginx/html
 
 
 CMD ["nginx", "-g", "daemon off;"]
