--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -9,9 +9,10 @@ server {
         include /etc/nginx/mime.types;
         default_type application/octet-stream;
     }
-
+    # if the frontend's variable `api_url` is the same this nginx server then we redirect
+    # the /api requests to the backend
     location /api {
-        set $target http://hello-blog-backend:3000;
+        set $target http://localhost:3000;
         proxy_pass $target;
         proxy_set_header Host yew.rs;
         proxy_set_header X-Real-IP $remote_addr;
