--- a/infra/Dockerfile-backend
+++ b/infra/Dockerfile-backend
@@ -1,10 +1,12 @@
-FROM rust:1 as build-env
+FROM rust:1 AS build-env
 WORKDIR /app
 COPY backend /app/backend
+COPY frontend /app/frontend
+COPY frontend-server /app/frontend-server
 COPY Cargo.toml /app/Cargo.toml
 COPY Cargo.lock /app/Cargo.lock
 
-RUN cargo build --release
+RUN cargo build -p backend --release
 
 FROM gcr.io/distroless/cc-debian12
 COPY --from=build-env /app/target/release/backend /
