--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
-LOGGING_LEVEL=INFO
+LOGGING_LEVEL=TRACE
+LOGGING_INCLUDE_HEADERS=false
 DEPLOY_ENVIRONMENT=dev
 JWT_SECRET=secret
 JWT_EXPIRATION=10000
